--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
         </div>
 
         <div class="text-and-image">
+            <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
             <h2 class="text-and-image__title">Prison Officer</h2>
             <h3 class="text-and-image__text">Apply for a job, join a service</h3>
-            <div class="text-and-image__image"></div>
+
         </div>
 
         <div class="accordion">
@@ -107,8 +108,9 @@
             </ul>
         </div>
 
-        <div class="text-and-image text-and-image--quote" >
-            <h3 class="text-and-image__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat</h3>
+        <div class="text-and-image text-and-image" >
+            <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
+            <h3 class="text-and-image__quote">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</h3>
             <div class="text-and-image__image"></div>
         </div>
 
@@ -148,6 +150,12 @@
                     <div class="accordion__list-element-content"></div>
                 </li>
             </ul>
+        </div>
+
+        <div class="text-and-image text-and-image" >
+            <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
+            <h3 class="text-and-image__quote">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</h3>
+            <div class="text-and-image__image"></div>
         </div>
 
         <div class="banner-image"></div>
