created linked node styles

--- a/index.html
+++ b/index.html
@@ -163,7 +163,32 @@
         <div class="linked-nodes">
             <h2 class="linked-nodes__title">Application steps</h2>
             <h3 class="linked-nodes__subtitle">Find out everything you need to know about joining the prison and probation service</h3>
-
+            <ol class="linked-nodes__list">
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+                <li class="linked-nodes__list-element">
+                    <div class="linked-nodes__list-element-main-text">main text</div>
+                    <div class="linked-nodes__list-element-subtext">sub text</div>
+                </li>
+            </ol>
         </div>
 
     </div>
