--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div></div>
             </div>
             <div class="header__nav-menu">
-                <ul>
+                <button class="header__nav-menu-close-button js"></button>
+                <ul class="header__nav-menu-list">
                     <li class="header__nav-menu-list-element">Home</li>
                     <li class="header__nav-menu-list-element">Apply</li>
                     <li class="header__nav-menu-list-element">Working as a Prison Officer</li>
@@ -197,8 +198,10 @@
 <script>
     (function addNavClickEventHandler() {
         var navLink = document.getElementsByClassName('header__nav-link js')[0];
-        navLink.addEventListener('click', toggleOpenNavMenu.bind(null, navLink))
+        navLink.addEventListener('click', toggleOpenNavMenu.bind(null, navLink));
 
+        var closeNavButton = document.getElementsByClassName('header__nav-menu-close-button js')[0];
+        closeNavButton.addEventListener('click', toggleOpenNavMenu.bind(null, closeNavButton));
     })();
 
     (function addAccordionFillerContent() {  // TODO remove this before launch
