added text-block component

--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
             </ol>
         </div>
 
+        <div class="text-block">
+            <h2 class="text-block__title">Working as a probation officer</h2>
+            <p>Find out everything you need to know about working as a probation officer</p>
+            <a class="text-block__link">Visit Probation jobs</a>
+        </div>
     </div>
 </body>
 </html>
