added quote component

--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
             <p>Find out everything you need to know about working as a probation officer</p>
             <a class="text-block__link">Visit Probation jobs</a>
         </div>
+
+        <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
     </div>
 </body>
 </html>
