commented out banner image

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="text-and-image__image"></div>
         </div>
 
-        <div class="banner-image"></div>
+        <!--<div class="banner-image"></div>-->
 
         <div class="linked-nodes">
             <h2 class="linked-nodes__title">Application steps</h2>
