--- a/index.html
+++ b/index.html
@@ -210,6 +210,24 @@
                 </button>
             </form>
         </div>
+
+        <div class="contact">
+            <h2 class="contact__title">Contact us</h2>
+            <ul class="contact__list">
+                <li class="contact__list-element">
+                    <a href="" class="contact__list-element-link">Chat online</a>
+                </li>
+                <li class="contact__list-element">
+                    <a href="" class="contact__list-element-link">Email</a>
+                </li>
+                <li class="contact__list-element">
+                    <a href="" class="contact__list-element-link">Organise a call back</a>
+                </li>
+                <li class="contact__list-element">
+                    <a href="" class="contact__list-element-link">Organise a visit</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
