vueified search component

--- a/index.html
+++ b/index.html
@@ -179,16 +179,7 @@
 
         <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
 
-        <div class="search">
-            <h2 class="search__title">Search for vacancies near you</h2>
-            <form class="search__form">
-                <input type="text" class="search__input" placeholder="Enter your post code" editable="editable" />
-                <button class="search__button">
-                    <div class="search__button-circle"></div>
-                    <div class="search__button-rectangle"></div>
-                </button>
-            </form>
-        </div>
+        <div id="search"></div>
 
         <div id="contact"></div>
 
