--- a/index.html
+++ b/index.html
@@ -171,18 +171,14 @@
             </ol>
         </div>
 
-        <div class="text-block">
-            <h2 class="text-block__title">Working as a probation officer</h2>
+        <text-block my-title="Working as a probation officer">
             <p>Find out everything you need to know about working as a probation officer</p>
-            <a class="text-block__link">Visit Probation jobs</a>
-        </div>
+            <a class='text-block__link'>Visit Probation jobs</a>
+        </text-block>
 
         <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
-
-        <div id="search"></div>
-
-        <div id="contact"></div>
-
+        <search></search>
+        <contact></contact>
     </div>
 </body>
 </html>
