vueified linked nodes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                     <h4 class="accordion__list-element-title">What to expect day-to-day</h4>
                     <button class="accordion__list-element-button"></button>
                     <div class="accordion__list-element-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-
                 </li>
                 <li class="accordion__list-element js">
                     <h4 class="accordion__list-element-title">The value you can bring</h4>
@@ -138,38 +137,9 @@
             <div class="text-and-image__image"></div>
         </div>
 
-        <!--<div class="banner-image"></div>-->
-
-        <div class="linked-nodes">
-            <h2 class="linked-nodes__title">Application steps</h2>
-            <h3 class="linked-nodes__subtitle">Find out everything you need to know about joining the prison and probation service</h3>
-            <ol class="linked-nodes__list">
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Complete online application form</div>
-                    <div class="linked-nodes__list-element-subtext">10 minutes</div>
-                </li>
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Judgement and numeracy tests</div>
-                    <div class="linked-nodes__list-element-subtext">24 minutes</div>
-                </li>
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Notification of pass or failure</div>
-                    <div class="linked-nodes__list-element-subtext">1 day</div>
-                </li>
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Book prison visit</div>
-                    <div class="linked-nodes__list-element-subtext">Up to 3 weeks</div>
-                </li>
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Recruitment Assessment Day</div>
-                    <div class="linked-nodes__list-element-subtext">1 day</div>
-                </li>
-                <li class="linked-nodes__list-element">
-                    <div class="linked-nodes__list-element-main-text">Vetting process</div>
-                    <div class="linked-nodes__list-element-subtext">Up to 12 weeks</div>
-                </li>
-            </ol>
-        </div>
+        <linked-nodes
+                title="Application steps"
+        ></linked-nodes>
 
         <text-block my-title="Working as a probation officer">
             <p>Find out everything you need to know about working as a probation officer</p>
@@ -177,7 +147,9 @@
         </text-block>
 
         <q class="quote" >Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</q>
+
         <search></search>
+
         <contact></contact>
     </div>
 </body>
