renamed linked-nodes to ordered-list; ordered-list is now data driven

--- a/index.html
+++ b/index.html
@@ -137,9 +137,35 @@
             <div class="text-and-image__image"></div>
         </div>
 
-        <linked-nodes
+        <ordered-list
                 title="Application steps"
-        ></linked-nodes>
+                subtitle="Find out everything you need to know about joining the prison and probation service"
+        >
+            <ol-element
+                    main-text="Complete online application form"
+                    subtext="10 minutes"
+            ></ol-element>
+            <ol-element
+                    main-text="Judgement and numeracy tests"
+                    subtext="24 minutes"
+            ></ol-element>
+            <ol-element
+                    main-text="Notification of pass or failure"
+                    subtext="1 day"
+            ></ol-element>
+            <ol-element
+                    main-text="Book prison visit"
+                    subtext="Up to 3 weeks"
+            ></ol-element>
+            <ol-element
+                    main-text="Recruitment Assessment Day"
+                    subtext="1 day"
+            ></ol-element>
+            <ol-element
+                    main-text="Vetting process"
+                    subtext="Up to 12 weeks"
+            ></ol-element>
+        </ordered-list>
 
         <text-block my-title="Working as a probation officer">
             <p>Find out everything you need to know about working as a probation officer</p>
