--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="public/css/main.css">
     <script src="public/js/main.js"></script>
-<script>
-
-</script>
 </head>
 <body>
     <div class="page-container js">
-
         <div class="header">
             <div class="header__logo"></div>
             <div class="header__text">Want a new challenge? We've got your back</div>
@@ -48,45 +44,43 @@
             <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
             <h2 class="text-and-image__title">Prison Officer</h2>
             <h3 class="text-and-image__text">Apply for a job, join a service</h3>
-
         </div>
 
-        <div class="accordion">
-            <h2 class="accordion__title">Benefits of being a prison officer</h2>
-            <h3 class="accordion__subtitle">Find out everything you need to know about becoming a prison officer</h3>
-            <ul class="accordion__list">
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Sense of belonging</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Do something that matters</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Flexibility, pay and holiday</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Helping others</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Personal development</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">New skills and challenges</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-            </ul>
-        </div>
+        <accordion
+                title="Benefits of being a prison officer"
+                subtitle="Find out everything you need to know about becoming a prison officer"
+        >
+            <accordion-element
+                    title="Sense of belonging"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Do something that matters"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Flexibility, pay and holiday"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Helping others"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Personal development"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Making a difference"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+        </accordion>
 
         <div class="text-and-image text-and-image" >
             <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
@@ -94,42 +88,41 @@
             <div class="text-and-image__image"></div>
         </div>
 
-        <div class="accordion">
-            <h2 class="accordion__title">Working in a prison setting</h2>
-            <h3 class="accordion__subtitle">Find out everything you need to know about working in a prison</h3>
-            <ul class="accordion__list">
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">What to expect day-to-day</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">The value you can bring</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Challenges worth facing</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Working as a team</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Diversity</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-                <li class="accordion__list-element js">
-                    <h4 class="accordion__list-element-title">Making a difference</h4>
-                    <button class="accordion__list-element-button"></button>
-                    <div class="accordion__list-element-content"></div>
-                </li>
-            </ul>
-        </div>
+        <accordion
+                title="Working in a prison setting"
+                subtitle="Find out everything you need to know about working in a prison"
+        >
+            <accordion-element
+                    title="What to expect day-to-day"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="The value you can bring"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Challenges worth facing"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Working as a team"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="Diversity"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+            <accordion-element
+                    title="New skills and challenges"
+            >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </accordion-element>
+        </accordion>
 
         <div class="text-and-image text-and-image" >
             <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
