--- a/index.html
+++ b/index.html
@@ -8,29 +8,10 @@
     <script src="public/js/main.js"></script>
 </head>
 <body>
-    <div class="page-container js">
-        <div class="header">
-            <div class="header__logo"></div>
-            <div class="header__text">Want a new challenge? We've got your back</div>
-            <div class="header__nav-link js">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div class="header__nav-menu">
-                <button class="header__nav-menu-close-button js"></button>
-                <ul class="header__nav-menu-list">
-                    <li class="header__nav-menu-list-element">Home</li>
-                    <li class="header__nav-menu-list-element">Apply</li>
-                    <li class="header__nav-menu-list-element">Working as a Prison Officer</li>
-                    <li class="header__nav-menu-list-element">Find a role</li>
-                    <li class="header__nav-menu-list-element">Is it right for me</li>
-                    <li class="header__nav-menu-list-element">Working in a prison setting</li>
-                    <li class="header__nav-menu-list-element">Application steps</li>
-                    <li class="header__nav-menu-list-element">Eligibility Checker</li>
-                </ul>
-            </div>
-        </div>
+<div id="site-container">
+<page-container>
+    
+    <page-header></page-header>
 
         <div class="call-to-action">
             <ul class="call-to-action__list">
@@ -171,5 +152,7 @@
 
         <contact></contact>
     </div>
+</page-container>
+</div>
 </body>
 </html>
