--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="site-container">
 <page-container>
 
-    <page-header></page-header>
+    <page-header>Want a new challenge? We've got your back</page-header>
 
     <div class="call-to-action">
         <ul class="call-to-action__list">
