--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
         </ul>
     </div>
 
-    <div class="text-and-image">
-        <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
-        <h2 class="text-and-image__title">Prison Officer</h2>
-        <h3 class="text-and-image__text">Apply for a job, join a service</h3>
-    </div>
+    <text-image-block
+            my-title="Prison officer"
+            text="Apply for a job, join a service"
+            img-url="http://via.placeholder.com/140x100"
+    >
+    </text-image-block>
 
     <accordion
             title="Benefits of being a prison officer"
@@ -64,12 +65,12 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </accordion-element>
     </accordion>
-
-    <div class="text-and-image text-and-image" >
-        <img class="text-and-image__image" src="http://via.placeholder.com/140x100" />
-        <h3 class="text-and-image__quote">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</h3>
-        <div class="text-and-image__image"></div>
-    </div>
+    
+    <text-image-block
+            quote="Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat"
+            img-url="http://via.placeholder.com/140x100"
+    >
+    </text-image-block>
 
     <accordion
             title="Working in a prison setting"
