text block now styles internal content better

--- a/apply.html
+++ b/apply.html
@@ -131,6 +131,25 @@
             <div class="text-and-image__image"></div>
         </div>
 
+        <text-block
+                my-title="What you need to apply"
+                subtitle="Find out everything you need to know about joining the prison service"
+        >
+            <h4>Documents</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque. Cras quis faucibus nunc.</p>
+            <ol>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+                <li>Lorem ipsum dolor sit amet</li>
+            </ol>
+            <h4>Time and location</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.</p>
+            <h4>Environment</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam odio justo, auctor quis odio ac, volutpat pulvinar neque.</p>
+        </text-block>
+
         <search></search>
 
         <contact></contact>
