created role page; created RoleIntro component;

--- a/apply.html
+++ b/apply.html
@@ -23,7 +23,7 @@
 
         <div class="call-to-action">
             <ul class="call-to-action__list">
-                <li class="call-to-action__list-element">Find a role</li>
+                <li class="call-to-action__list-element"><a href="">Find a role</a></li>
             </ul>
         </div>
 
