--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <div class="call-to-action">
         <ul class="call-to-action__list">
-            <li class="call-to-action__list-element">Apply</li>
-            <li class="call-to-action__list-element">About the role</li>
-            <li class="call-to-action__list-element">Search</li>
+            <li class="call-to-action__list-element"><a href="/apply.html">Apply</a></li>
+            <li class="call-to-action__list-element"><a href="/role.html">About the role</a></li>
+            <li class="call-to-action__list-element"><a href="">Search</a></li>
         </ul>
     </div>
 
