created Tabs component for role page

--- a/role.html
+++ b/role.html
@@ -24,6 +24,18 @@
             No ordinary job,<br/> no ordinary officer
         </role-intro>
 
+        <tabs>
+            <tab
+                    tab-title="Overview"
+            >Overview</tab>
+            <tab
+                    tab-title="Benefits"
+            >Benefits</tab>
+            <tab
+                    tab-title="Day-to-day"
+            >Day-to-day</tab>
+        </tabs>
+
         <search></search>
 
         <contact></contact>
